spacing fix for errors

--- a/web/src/styles/forms.scss
+++ b/web/src/styles/forms.scss
@@ -17,7 +17,7 @@
 
       label:not([for="terms_and_conditions"]) {
         display: block;
-        margin: 10px 0;
+        margin: 30px 0;
 
         span, input, textarea {
           color: $accountWhite;
